# netconf

./: .gitignore  .pylintrc  .travis.yml  CHANGES.org  MANIFEST.in  Makefile  README.md  README.rst  pylintrc  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
doc/source/: conf.py  develop.rst  index.rst  installation.rst  reference.rst  usage-cli.rst  usage-dev.rst  usage.rst
doc/source/api/: autoindex.rst  netconf.__main__.rst  netconf.base.rst  netconf.cli.rst  netconf.client.rst  netconf.error.rst  netconf.ncclient.rst  netconf.server.rst  netconf.util.rst  netconf.xpath.rst
example/: server-key  server-key.pub  system-server.py
netconf/: __init__.py  __main__.py  base.py  cli.py  client.py  error.py  ncclient.py  server.py  util.py
tests/: host_key  mockserver.py  test_chunkit.py  test_get.py  test_locks.py  test_main.py  test_netconf.py  test_netconf_svr.py  testutil.py
