[metadata]
name = netconf
author = Christian Hopps
author_email = chopps@gmail.com
summary = Netconf server and client library.
description-file = README.rst
home-page = https://github.com/choppsv1/netconf/
license = Apache-2

[files]
packages =
    netconf

[entry_points]
console_scripts =
    netconf-client = netconf.ncclient:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[nosetests]
verbosity=1
with-doctest=1

[coverage:run]
source=netconf,tests

[tool:pytest]
addopts = --doctest-modules
testpaths = netconf tests

[flake8]
max-line-length=120
# E125 continuation line does not distinguish
# E128 continuation line does not distinguish
# E201 whitespace after '['
# E202 whitespace after ']'
# E211 whitespace before '('
# E261 at least 2 spaces for inline comment
# E265 block comment should start with '# '
# enable E302 (expected 2 newlines)
# enable E303 too many blank lines
# F401 unused import caught by pylint if we want it
ignore=E125,E128,E201,E202,E211,E261,E265,F401
