[metadata]
name = netconf
author = Christian Hopps
author_email = chopps@gmail.com
summary = Netconf server and client library.
description-file = README.rst
home-page = https://github.com/choppsv1/netconf/
license = Apache-2

[files]
packages =
    netconf

[entry_points]
console_scripts =
    netconf-client = netconf.ncclient:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[nosetests]
verbosity=1
with-doctest=1

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = ALLOW_UNICODE
testpaths = netconf tests

[coverage:run]
source=netconf,tests

[yapf]
column_limit = 100
based_on_style = pep8
coalesce_brackets = True
each_dict_entry_on_separate_line = True
space_between_ending_comma_and_closing_bracket = True

[flake8]
max-line-length=100
# E125 continuation line does not distinguish
# E128 continuation line does not distinguish
# E201 whitespace after '['
# E202 whitespace after ']'
# E211 whitespace before '('
# E261 at least 2 spaces for inline comment
# E265 block comment should start with '# '
# enable E302 (expected 2 newlines)
# enable E303 too many blank lines
# F401 unused import caught by pylint if we want it
ignore=E125,E128,E201,E202,E211,E261,E265,F401
